test-data/getting-started/app-foo-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo-site
  name: foo-site
  namespace: foo-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-site
  template:
    metadata:
      labels:
        app: foo-site
    spec:
      containers:
      - image: hashicorp/http-echo:alpine
        name: foo-site
        args:
        - "-text=Welcome-to-foo-site"
        - "-listen=:80"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foo-site
  name: foo-site
  namespace: foo-site
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: foo-site
