test-data/getting-started/app-foo-store-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo-store-v2
  name: foo-store-v2
  namespace: foo-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-store-v2
  template:
    metadata:
      labels:
        app: foo-store-v2
    spec:
      containers:
      - image: hashicorp/http-echo:1.0.0
        name: foo-store-v2
        args:
        - "-text=Welcome-to-foo-store-v2"
        - "-listen=:8080"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foo-store-v2
  name: foo-store-v2
  namespace: foo-store
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo-store-v2
