test-data/getting-started/foo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: foo-gateway
  namespace: foo-infra
spec:
  gatewayClassName: aws-alb
  listeners:
  - name: web
    port: 80
    protocol: HTTP
    hostname: "foo.example.com"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allowGateway: foo
