test-data/getting-started/foo-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo-infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: foo-site
  labels:
    allowGateway: foo
---
apiVersion: v1
kind: Namespace
metadata:
  name: foo-store
  labels:
    allowGateway: foo
