test-data/getting-started/foo-site-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo-site
  namespace: foo-site
spec:
  parentRefs:
  - kind: Gateway
    name: foo-gateway
    namespace: foo-infra
  rules:
  - backendRefs:
    - name: foo-site
      port: 80
      namespace: foo-site
    matches:
    - path:
        type: PathPrefix
        value: /site
